Added composer.json file

--- a/page_capture.info.yml
+++ b/page_capture.info.yml
@@ -1,5 +1,5 @@
 name: Page Capture
-description: Take screenshots in site pages.
+description: Take screenshots in site's pages.
 package: Other
 
 type: module
